<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.avirupdebnath.scheduler.AddClassActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/to_2"
        android:width="56dp"
        android:textAlignment="center"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/start_time"
        android:layout_alignBottom="@+id/start_time"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:id="@+id/spinner"
        android:layout_marginBottom="40dp"
        android:layout_alignTop="@+id/dayOfWeek"
        android:layout_toRightOf="@+id/dayOfWeek"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="130dp"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/class_name"
        android:id="@+id/className1"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/dayOfWeek"
        android:layout_alignStart="@+id/dayOfWeek" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:height="30dp"
        android:id="@+id/className5"
        android:layout_toRightOf="@+id/className1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/className1"
        android:layout_below="@+id/spinner" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/view_class"
        android:layout_toRightOf="@+id/view_class"
        android:background="@drawable/rounded_corner"
        android:text="End   Time"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corner"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_start_time"
        android:textAlignment="center"
        android:id="@+id/start_time"
        android:layout_below="@+id/batch"
        android:layout_toStartOf="@+id/view_class"
        android:layout_toLeftOf="@+id/view_class" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/day_of_the_week"
        android:layout_marginBottom="40dp"
        android:id="@+id/dayOfWeek"
        android:layout_below="@+id/classDetails1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_class_details"
        android:id="@+id/classDetails1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/loc1"
        android:layout_below="@+id/className5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/location5"
        android:layout_toStartOf="@+id/location5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location5"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/className5"
        android:layout_alignStart="@+id/className5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/loc1"
        android:layout_below="@+id/className1" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_class1"
        android:id="@+id/add_class"
        android:layout_alignBaseline="@+id/cancel"
        android:layout_alignBottom="@+id/cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/end_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_classes"
        android:id="@+id/view_class"
        android:layout_alignTop="@+id/add_class"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/batch"
        android:id="@+id/batch"
        android:layout_below="@+id/location5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/batchName5"
        android:layout_toStartOf="@+id/batchName5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/batchName5"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/location5"
        android:layout_alignStart="@+id/location5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/start_time"
        android:layout_below="@+id/location5" />


</RelativeLayout>
